# nekro-plugin-cloudmusic-search

./: README.md  __init__.py  card_api.py  image_gen.py  models.py  ncm_api.py  pyproject.toml  utils.py
.cursor/rules/: plugin-rules.mdc
